--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,4 @@
-# Nginx Proxy Manager Database Configuration
-NPM_DB_USER=npm_user
-NPM_DB_PASSWORD=your_npm_secure_password_change_this
-NPM_DB_NAME=npm_db
-NPM_DB_ROOT_PASSWORD=your_npm_root_secure_password_change_this
-DISABLE_IPV6=true
-
-# Application Database Configuration (PostgreSQL)
-POSTGRES_DB=knowledge_base
-POSTGRES_USER=kb_user
-POSTGRES_PASSWORD=your_secure_password_here_change_this
-
-# Security Configuration
+# Security Settings
 SECRET_KEY=your-very-long-secret-key-at-least-32-characters-change-this
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=1440
@@ -20,9 +8,26 @@ DEBUG=false
 ENVIRONMENT=production
 LOG_LEVEL=info
 
-# OpenRouter API Configuration
-OPENROUTER_API_KEY=your_openrouter_api_key_here
-OPENROUTER_MODEL=meta-llama/llama-3.2-3b-instruct:free
+# Database Configuration (для Docker используется PostgreSQL)
+DATABASE_URL=postgresql://webapp_user:webapp_password@postgres:5432/webapp_db
 
-# Backup Configuration
-BACKUP_KEEP_DAYS=7
+# PostgreSQL Settings (используются в docker-compose.yml)
+POSTGRES_USER=webapp_user
+POSTGRES_PASSWORD=webapp_password
+POSTGRES_DB=webapp_db
+POSTGRES_PORT=5432
+
+# Web Application Port
+WEB_PORT=8000
+
+# Nginx Proxy Manager Ports
+# HTTP Port
+NPM_HTTP_PORT=80
+# HTTPS Port
+NPM_HTTPS_PORT=443
+# Admin Interface Port
+NPM_ADMIN_PORT=81
+
+# OpenRouter API Configuration
+OPENROUTER_API_KEY=your-openrouter-api-key-here
+OPENROUTER_MODEL=tngtech/deepseek-r1t2-chimera:free
